<resources>
    <string name="app_name">Coast</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="dont_have_account_create_account">Don\'t have an account yet? <b>Create Account</b></string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="image">Image</string>
    <string name="email_empty">Email Can\'t be Empty</string>
    <string name="password_empty">Password can\'t be Empty</string>
    <string name="login_fail">Something wrong. Login Fail</string>
    <string name="login_success">Login Success</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_empty">First Name can\'t be Empty</string>
    <string name="second_name_empty">Second Name can\'t be Empty</string>
    <string name="confrim_password_empty">Confirm Password can\'t be Empty</string>
    <string name="password_and_confirm_not_same">Password and Confirm Password are not Same</string>
    <string name="register_fail">Register was Fail</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>