<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mandys_pink"
    tools:context=".login.presentation.LoginFragment">

    <ImageView
        android:id="@+id/login_img_coast"
        android:layout_width="411dp"
        android:layout_height="333dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coast" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card_wrapper"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_img_coast"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/login_form_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/large_size">

            <TextView
                style="@style/header_label2"
                android:text="@string/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_email_wrapper"
                style="@style/wrapper_edit_text"
                android:layout_marginTop="@dimen/large_size"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input_email"
                    style="@style/input_edit_text"
                    android:hint="@string/email"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_password_wrapper"
                style="@style/wrapper_edit_text_password"
                android:layout_marginTop="@dimen/extra_large_size"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_input_password"
                    style="@style/input_edit_text_password"
                    android:hint="@string/password"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn_login"
                style="@style/bg_button_auth"
                android:text="@string/login" />

            <TextView
                android:id="@+id/login_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center|bottom"
                android:text="@string/dont_have_account_create_account" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        style="@style/header_label_1"
        android:layout_marginStart="28dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/login_img_coast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/login_card_wrapper"
        app:layout_constraintEnd_toEndOf="@+id/login_img_coast"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@+id/login_img_coast"
        app:layout_constraintTop_toTopOf="@+id/login_img_coast"
        app:layout_constraintVertical_bias="0.275"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>