<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mandys_pink"
    tools:context=".register.presentation.RegisterFragment">

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/small_coast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/register_card_view_wrapper"
        style="@style/CustomCardViewStyle"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginTop="-18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large_size">

                <TextView
                    style="@style/header_label2"
                    android:text="@string/create_account"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_input_first_name_wrapper"
                    style="@style/wrapper_edit_text"
                    android:layout_marginTop="@dimen/large_size"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_first_name"
                        style="@style/input_edit_text"
                        android:hint="@string/first_name"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_input_second_name_wrapper"
                    style="@style/wrapper_edit_text"
                    android:layout_marginTop="@dimen/large_size"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_second_name"
                        style="@style/input_edit_text"
                        android:hint="@string/second_name"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_input_email_wrapper"
                    style="@style/wrapper_edit_text"
                    android:layout_marginTop="@dimen/large_size"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_email"
                        style="@style/input_edit_text"
                        android:hint="@string/email"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_input_password_wrapper"
                    style="@style/wrapper_edit_text_password"
                    android:layout_marginTop="@dimen/extra_large_size"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_password"
                        style="@style/input_edit_text_password"
                        android:hint="@string/password"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_input_confirm_password_wrapper"
                    style="@style/wrapper_edit_text_password"
                    android:layout_marginTop="@dimen/extra_large_size"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_confirm_password"
                        style="@style/input_edit_text_password"
                        android:hint="@string/confirm_password"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_btn_register"
                    style="@style/bg_button_auth"
                    android:text="@string/register" />

            </LinearLayout>

        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/register_card_view_wrapper"
        app:layout_constraintEnd_toEndOf="@+id/register_image"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        style="@style/header_label_1" />


</androidx.constraintlayout.widget.ConstraintLayout>